# AIUDSA18

./: LICENSE  README.md  course-description.ipynb  pyproject.toml
flink-and-kafka/: pyproject.toml
flink-and-kafka/kafka-examples/: kafka-examples.ipynb
flink-examples/: flink-examples.ipynb  input.csv  pyproject.toml
hadoop-examples/: map-reduce.ipynb  mapper.py  reducer.py  working-with-hdfs.ipynb
kafka-examples/: endless-kafka.ipynb  kafka-examples.ipynb  kafka-in-batches.ipynb
spark-examples/: JSON2JSON-lines.ipynb  data-munging.ipynb  endless-stream.ipynb  spark-and-kafka.py  spark-ml.ipynb  spark-streaming.ipynb
