[tool.poetry]
name = "big-data-exercises"
version = "0.1.0"
description = ""
authors = ["Boris Shminke"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.8"
pyspark = "^3.0.1"
numpy = "^1.19.2"
kafka-python = "^2.0.2"
virtualenv = "^20.1.0"
flake8 = "^3.8.4"
black = "^20.8b1"
pylint = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
