[tool.poetry]
name = "big-data-exercises"
version = "0.1.1"
description = ""
authors = ["Boris Shminke"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyspark = "*"
numpy = "*"
kafka-python = "*"

[tool.poetry.dev-dependencies]
jupyterlab = "*"
virtualenv = "*"
flake8 = "*"
black = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
