[tool.poetry]
name = "AIUDSA18"
version = "0.2.0"
description = "Lab sessions for the Distributed Big Data Course"
authors = ["Boris Shminke <boris@shminke.ml>"]
license = "MIT"
repository = "https://github.com/inpefess/gym-saturation"
readme = "README.rst"
classifiers=[
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Operating System :: OS Independent",
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: MIT License",
	"Intended Audience :: Education",
	"Environment :: Console",
	"Natural Language :: English",
	"Topic :: System :: Distributed Computing",
]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.9"
pyspark = ">=3.2.0"
pandas = "*"
pyarrow = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]
black = "*"
jupyterlab = "*"
mypy = "*"
pylint = "*"
pre-commit = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=79
