[tool.poetry]
name = "big-data-exercises"
version = "0.1.0"
description = ""
authors = ["Boris Shminke <boris.shminke@unice.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
apache-flink = "^1.11.2"
jupyterlab = "^2.2.9"
kafka-python = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
